<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FCTBoat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ip">IP:</string>
    <string name="port">Port:</string>
    <string name="connect">Connect</string>
    <string name="conn_error">Server not found!</string>
    <string name="ip_default">192.168.0.1</string>
    <string name="port_default">26000</string>
    <string name="connecting">Connecting...</string>

</resources>
